<resources>
    <string name="app_name">proyecto_final_DAM</string>
    <string name="registrar">Registrar</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="emailHint">Correo electrónico</string>
    <string name="passwordHint">Contraseña</string>
    <string name="forgotPassword">¿Olvidó su contraseña?</string>
    <string name="password_required">La contraseña es obligatoria</string>
    <string name="email_required">El correo es obligatorio</string>
    <string name="email_invalid">El correo no es válido</string>
    <string name="email_not_found">El correo no está registrado</string>
    <string name="password_incorrect">Contraseña incorrecta</string>
    <string name="register_form">Formulario de registro</string>
    <string name="repeatPasswordHint">Repite la contraseña</string>
    <string name="login_info">Inicio de sesión *</string>
    <string name="personal_data">Datos personales</string>
    <string name="nameHint">Nombre</string>
    <string name="addressHint">Dirección</string>
    <string name="phoneHint">Teléfono</string>
    <string name="internalError_login">Hubo un problema interno al iniciar sesión</string>
    <string name="internalErrorTitle_login">Error inesperado</string>
    <string name="accept">Aceptar\n</string>
    <string name="internalErrorTitle">Error insesperado</string>
    <string name="internalError_register">Hubo un error interno al registrar el usuario.</string>
    <string name="registerErrorTitle">Error al registrarse.</string>
    <string name="registerError">Comprueba que los campos son correctos.</string>
    <string name="registerSuccessTitle">Éxito al registrarse</string>
    <string name="registerSuccess">El usuario se ha registrado correctamente.\nSe redirigirá automáticamente a la pantalla de inicio de sesión</string>
    <string name="registerQuestionTitle">Correo no registrado</string>
    <string name="registerQuestionMessage">El correo no se encuentra entre los registrados.\n¿Quieres registrarte ahora?</string>
    <string name="cancel">Cancelar</string>
    <string name="titleCabecera">Cabanes</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_opinions">Reseñas</string>
    <string name="menu_information">Mi información</string>
    <string name="add_cart_button">Añadir al carrito</string>
    <string name="adminMenu">Panel de administración</string>
    <string name="responseError_login">Hubo un problema de conexión con el servidor.</string>
    <string name="titleOrders">Mis pedidos</string>
    <string name="noOrdersYet">No has hecho ningún pedido todavía, ¿A que esperas?</string>
    <string name="return_home">Volver a la tienda</string>
    <string name="titleAdminHome">Panel de administrador</string>
    <string name="save">Guardar</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="information_profile">Perfil e inicio de sesión</string>
    <string name="information_contact">Información de contacto</string>
    <string name="resumen">Resumen del pedido</string>
    <string name="tramitarPedido">Tramitar pedido</string>
    <string name="cestaVacia">Todavía no hay productos en el carrito.</string>
    <string name="carrito">Cesta de la compra</string>
    <string name="empty_cart">No hay productos en el carrito, \n¿A que esperas?</string>
    <string name="total">Total:</string>
    <string name="productAdded">Producto añadido correctamente</string>
    <string name="complete_order">Confirmar pedido</string>
    <string name="completarPedido">Completa tu pedido</string>
    <string name="direccion">Dirección:</string>
    <string name="direccionEjemplo">Calle, Nº, piso, puerta...</string>
    <string name="tuPedido">Tu pedido</string>
    <string name="metodoPago">Método de pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta">"Tarjeta "</string>
    <string name="carritoVacio">No tienes productos en el carrito</string>
    <string name="orderSuccessTitle">Pedido realizado</string>
    <string name="orderSuccessMessage">Tu pedido está en marcha!</string>
    <string name="errorCompleteOrderTitle">Error al realizar pedido</string>
    <string name="errorCompleteOrder">Asegurate de rellenar todos los campos.</string>
    <string name="orderDetailsTitle">Detalles del pedido</string>
    <string name="old_password">Antigua contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="repeatNewPasswordHint">Repite la nueva contraseña</string>
    <string name="internalError_updateUser">Hubo un problema al actualizar la información. Intentalo de nuevo más tarde.</string>
    <string name="passwordSuccessTitle">Contraseña actualizada.</string>
    <string name="success_passwordUser">Recuerda utilizar la nueva contraseña la proxima vez que inicies sesión.</string>
    <string name="errorPasswordTitle">No se pudo actualizar la contraseña</string>
    <string name="error_oldPasswordUser">Introduce correctamente la antigua contraseña y vuelve a intentarlo.</string>
    <string name="error_oldPassword">Contraseña incorrecta</string>
    <string name="passwordsNotMatch">Las contraseñas no coinciden</string>
    <string name="error_emptyField">Información requerida</string>
    <string name="updateSuccessTitle">Datos actualizados</string>
    <string name="updateSuccess">Tu información ha quedado registrada en el sistema.</string>
    <string name="responseError_img">Error al obtener imagen del servidor</string>
    <string name="busca">Busca tu producto</string>
</resources>