<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/pedidos"
            android:title="@string/menu_orders" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/user"
            android:title="@string/menu_information" />
        <item
            android:id="@+id/nav_opinions"
            android:icon="@drawable/favorites"
            android:title="@string/menu_opinions"/>
    </group>
    <group >

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/admin"
            android:title="@string/adminMenu" />
    </group>
</menu>