<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">
s
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:padding="10dp"
        android:textSize="21dp"
        android:text="@string/change_password" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/old_password"
        android:inputType="textPassword" />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="250dp"

        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password_confirm"
        android:layout_width="250dp"

        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/repeatNewPasswordHint"
        android:inputType="textPassword" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/dialog_change_password_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/dark_veri_peri"
            android:fontFamily="@font/nunito_regular"
            android:onClick="cancelChangePassword"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/dialog_change_password_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_regular"
            android:onClick="changePassword"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>