<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/register_form"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_weight="30"
            android:src="@drawable/pizzeria_cabanes_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito_lightitalic"
                android:text="@string/personal_data"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/name_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/nameHint"
                android:inputType="text" />

            <EditText
                android:id="@+id/address1_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/addressHint"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/phone1_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/phoneHint"
                android:inputType="phone" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito_lightitalic"
                android:text="@string/login_info"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/email_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/repeatPassword_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/repeatPasswordHint"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/registerButton_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_regular"
                    android:onClick="register"
                    android:text="@string/registrar" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>