<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:openDrawer="end"
    tools:context=".CompleteOrder">
    <LinearLayout
        android:id="@+id/rootLayout_complete_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottom_corners"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/logoCompleteOrder"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="10"
                android:src="@drawable/pizzeria_cabanes_white" />
            <TextView
                android:id="@+id/title_complete_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="80"
                android:text="@string/completarPedido"
                android:textSize="24sp" />
            <ImageButton
                android:id="@+id/menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="10"
                android:onClick="showMenu"
                android:scaleType="center"
                android:background="#00FFFFFF"
                android:src="@drawable/list"
                app:tint="@color/white" />
        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/completeOrderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pedidoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tuPedido"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/numeroProductosTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="X productos"
                    android:padding="10dp"/>
                <LinearLayout
                    android:id="@+id/layoutProductos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/direccionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/direccion"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/direccionEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/direccionEjemplo"
                        android:textSize="20sp"
                        android:layout_margin="10dp"/>

                </LinearLayout>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/metodoPago"
                    android:padding="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/euro"
                        android:padding="5dp"/>

                    <CheckBox
                        android:id="@+id/cashCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/efectivo" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/card"
                        android:padding="5dp"/>

                    <CheckBox
                        android:id="@+id/cardCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tarjeta" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Total: 0.00€" />

                <Button
                    android:id="@+id/completeOrderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/light_veri_peri"
                    android:onClick="completeOrder"
                    android:padding="10dp"
                    android:text="@string/complete_order"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"></LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:visibility="gone"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>