<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/dark_veri_peri"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tint="@color/white"
                android:src="@drawable/carrito"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrito"
                android:textColor="@color/white"
                android:layout_weight="5"/>
            <ImageButton
                android:id="@+id/closeCartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/cancel"
                app:tint="@color/red"
                android:backgroundTint="#00FFFFFF"/>
        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/cartLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/emptyCartText"
                    android:padding="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_cart"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="12sp"/>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tramitarPedidoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/secondary_dark_veri_peri"
                android:text="@string/tramitarPedido"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total"/>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/totalCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="0.00€"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>